--- a/.travis.yml
+++ b/.travis.yml
@@ -43,11 +43,11 @@ before_script:
 # Run API & integration test
 script:
   - travis_wait 20 grunt test --stack --verbose
-  - travis_wait 20 node ./qa/testInbox.js
-  - travis_wait 20 node ./qa/testRepeatComplexRoute.js
-  - travis_wait 20 node ./qa/testNetComplexRoute.js
-  - travis_wait 20 node ./qa/testDelegationDocument.js
-  - travis_wait 20 node ./qa/testDelegationTask.js
+#  - travis_wait 20 node ./qa/testInbox.js
+#  - travis_wait 20 node ./qa/testRepeatComplexRoute.js
+#  - travis_wait 20 node ./qa/testNetComplexRoute.js
+#  - travis_wait 20 node ./qa/testDelegationDocument.js
+#  - travis_wait 20 node ./qa/testDelegationTask.js
 
 # Stop deamon and show log
 after_script:
