--- a/.travis.yml
+++ b/.travis.yml
@@ -1,59 +1,51 @@
-sudo: required
 dist: trusty
+sudo: required
 
-addons:
-  sauce_connect:
-    username: semanticmachines
-    access_key: 0fdd3d85-3d51-4fd5-89ed-10980baa57a5
-    no_ssl_bump_domains: localhost
+language: node_js
+node_js: "stable"
 
-env:
-  global:
-    - secure: PYwCZBpLe87Qg2RXibiGk9LrNrkFMlGuFnf/mp+f5kc4bFoVMo7Pl+Rdl4S1H33kLYK6d3pFggddwWxO7HGH9IyHzQ6Gfu3u9gR9rJXovQYfEp8muDCJDXvLEUoMxRgnRPa202p+BUnrNMwebxYHmwgef0s1dYQpRsewmPWHevk=
-    - secure: s1BV5JjhQIIdasowuMW2OqH5LjvN3tnU+sEGdz4HxWpHufgFUeNBVzu13S85qSxdch55lCyB4ft58PAX3q0wHFPYvBEwkvMlSFny7LeiytW9HZ/fkCG+Dwh6H6OEK1jKQriXZrYLQm4m6gnnAQYsUpDhxP12YejyyBbfaVW73Og=
-
-# Load all dependencies
-# Compile vibe-d before main project to prevent OutOfMemory issue
 before_install:
-  - chmod +x ./install.sh
-  - ./install.sh&>install.log
-  - dub -v fetch vibe-d --version=0.7.30
-  - npm install selenium-webdriver@2.47.0
+  - stty cols 80
+  - sudo apt-get install nodejs-legacy
   - npm install -g grunt-cli
   - npm install grunt-contrib-qunit --save-dev
   - npm install grunt --save-dev
-#  - npm install coveralls --save-dev
-#  - npm install grunt-coveralls --save-dev
+
+addons:
+#  firefox: latest
+#  sauce_connect:
+#    username: semanticmachines
+#    access_key: 0fdd3d85-3d51-4fd5-89ed-10980baa57a5
+  apt:
+    sources:
+     - google-chrome
+    packages:
+     - google-chrome-stable fluxbox
 
 # Build
 install:
+  - chmod +x ./install.sh
+  - ./install.sh&>install.log
+  - source $HOME/.cargo/env
+#  - npm install --save-dev testcafe-browser-provider-saucelabs
+  - npm install --save-dev testcafe
   - go version
+  - dmd --version    
+  - rustc -V          
   - ./build.sh
 
-
-# Run service as daemon and GUI
 before_script:
-  #- "export DISPLAY=:99.0"
-  #- "sh -e /etc/init.d/xvfb start"
-  #- sleep 3 # give xvfb some time to start
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - fluxbox >/dev/null 2>&1 &
   - ./control-start.sh
-  - sleep 180  # give Web server some time to bind to sockets, load startup data, etc
-  - date
+  - sleep 180
 
-# Run API & integration test
 script:
   - travis_wait 20 grunt test --stack --verbose
-#  - travis_wait 20 node ./qa/testInbox.js
-#  - travis_wait 20 node ./qa/testRepeatComplexRoute.js
-#  - travis_wait 20 node ./qa/testNetComplexRoute.js
-#  - travis_wait 20 node ./qa/testDelegationDocument.js
-#  - travis_wait 20 node ./qa/testDelegationTask.js
 
-# Stop deamon and show log
 after_script:
   - ./control-stop.sh
-#  - ./send-to-chunk-io.sh
-#  - grunt coveralls
 
 after_failure:
   - ./control-stop.sh
